# rules_dotnet

./: WORKSPACE
dotnet/private/: BUILD.bazel
dotnet/private/rules/common/: attrs.bzl
dotnet/private/rules/csharp/actions/: csharp_assembly.bzl
tools/compiler_wrapper/: BUILD.bazel  program.cc
